add responsive design for  mobile and tablet

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
             </div>
             <div class="features-content">
                 <div class="features-list">
-                    <div class="features-item feature-1 active">
+                    <div class="features-item feature-1">
                         <h4 class="title">Well Integrated</h4>
                         <p>The bee's knees chancer car boot absolutely.</p>
                     </div>
@@ -271,22 +271,22 @@
                 <p class="description">The full monty spiffing good time no biggie cack grub fantastic.</p>
             </div>
             <div class="counter-list">
-                <div class="counter-item">
+                <div class="counter-item counter-1">
                     <div class="icon"><img src="assets/images/icons/counter-icon-1.svg" alt="icon 1"></div>
                     <h3 class="title">45k+</h3>
                     <p>Active Installation</p>
                 </div>
-                <div class="counter-item">
+                <div class="counter-item counter-2">
                     <div class="icon"><img src="assets/images/icons/counter-icon-2.svg" alt="icon 2"></div>
                     <h3 class="title">108k+</h3>
                     <p>Active Installation</p>
                 </div>
-                <div class="counter-item">
+                <div class="counter-item counter-3">
                     <div class="icon"><img src="assets/images/icons/counter-icon-3.svg" alt="icon 3"></div>
                     <h3 class="title">307k+</h3>
                     <p>Active Installation</p>
                 </div>
-                <div class="counter-item">
+                <div class="counter-item counter-4">
                     <div class="icon"><img src="assets/images/icons/counter-icon-4.svg" alt="icon 4"></div>
                     <h3 class="title">725k+</h3>
                     <p>Active Installation</p>
@@ -301,9 +301,22 @@
     <section class="video" id="video">
         <div class="container">
             <div class="video-content">
-                <div class="thumb">
-                    <img src="assets/images/video-thumb-1.jpg" alt="video thumb">
-                    <a href="#" class="player"><i class="fas fa-play"></i></a>
+                <div class="video-media">
+                    <div class="thumb">
+                        <img src="assets/images/video-thumb-1.jpg" alt="video thumb">
+                        <a href="#" class="player"><i class="fas fa-play"></i></a>
+                    </div>
+                    <div class="text">
+                        <h3 class="title">
+                            Watch the two-minute video to learn how.
+                        </h3>
+                        <p>
+                            The wireless cheesed on your bike mate zonked a load of old tosh hunky dory it's all gone to
+                            pot
+                            haggle william car boot pear shaped geeza.
+                        </p>
+                        <button class="main-btn">Get Started</button>
+                    </div>
                 </div>
                 <div class="slider">
                     <div class="slide">
@@ -318,16 +331,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="text">
-                    <h3 class="title">
-                        Watch the two-minute video to learn how.
-                    </h3>
-                    <p>
-                        The wireless cheesed on your bike mate zonked a load of old tosh hunky dory it's all gone to pot
-                        haggle william car boot pear shaped geeza.
-                    </p>
-                    <button class="main-btn">Get Started</button>
-                </div>
+
             </div>
         </div>
     </section>
@@ -412,7 +416,7 @@
                 <div class="pricing-card">
                     <span class="badge">
                         Most Popular
-                   </span>
+                    </span>
                     <h6>Sweet</h6>
                     <p class="price"><sup>$</sup> 16<sub>/month</sub></p>
                     <p class="desc">
@@ -485,7 +489,7 @@
         <div class="container">
             <div class="slider">
                 <div class="slide">
-                     <div class="author">
+                    <div class="author">
                         <img src="assets/images/people/customer-1.jpg" alt="author image">
                         <div class="rate">
                             <i class="fas fa-star"></i>
@@ -495,23 +499,25 @@
                             <i class="fas fa-star"></i>
                         </div>
                         <span>(4.7) review</span>
-                     </div>
-                     <div class="review">
-                         <p>
-                            Why I say old chap that is spiffing chip shop such a fibber the bee's knees, the wireless Richard fantastic do one cracking goal pukka baking cakes starkers mush don't get shirty with me argy bargy, I naff chimney pot blimey he lost his bottle cup.
-                         </p>
-                         <div class="author-info">
+                    </div>
+                    <div class="review">
+                        <p>
+                            Why I say old chap that is spiffing chip shop such a fibber the bee's knees, the wireless
+                            Richard fantastic do one cracking goal pukka baking cakes starkers mush don't get shirty
+                            with me argy bargy, I naff chimney pot blimey he lost his bottle cup.
+                        </p>
+                        <div class="author-info">
                             <h5 class="title">Hanson Deck</h5>
                             <span>Web developer</span>
-                         </div>
-                     </div>
-                </div>
-                <div class="slider-arrows">
-                    <div class="prev">
-                        <i class="fas fa-arrow-left"></i>
+                        </div>
                     </div>
-                    <div class="next">
-                        <i class="fas fa-arrow-right"></i>
+                    <div class="slider-arrows">
+                        <div class="prev">
+                            <i class="fas fa-arrow-left"></i>
+                        </div>
+                        <div class="next">
+                            <i class="fas fa-arrow-right"></i>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -572,64 +578,65 @@
     ========================= -->
     <footer>
         <div class="container">
-           <div class="content">
-            <div class="footer-about">
-                <div class="logo">
-                    <img src="assets/images/logo.png" alt="logo image">
+            <div class="content">
+                <div class="footer-about">
+                    <div class="logo">
+                        <img src="assets/images/logo.png" alt="logo image">
+                    </div>
+                    <p>Appie WordPress is theme is the last theme you will ever have.</p>
+                    <a href="#">Read More <i class="fas fa-arrow-right"></i></a>
+                    <div class="social-links">
+                        <a href="#"><i class="fab fa-facebook-f"></i></a>
+                        <a href="#"><i class="fab fa-twitter"></i></a>
+                        <a href="#"><i class="fab fa-pinterest-p"></i></a>
+                        <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                    </div>
                 </div>
-                <p>Appie WordPress is theme is the last theme you will ever have.</p>
-                <a href="#">Read More <i class="fas fa-arrow-right"></i></a>
-                <div class="social-links">
-                    <a href="#"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#"><i class="fab fa-twitter"></i></a>
-                    <a href="#"><i class="fab fa-pinterest-p"></i></a>
-                    <a href="#"><i class="fab fa-instagram"></i></a>
+                <div class="footer-company">
+                    <h4 class="title">
+                        Company
+                    </h4>
+                    <ul class="footer-links-list">
+                        <li><a href="#" class="link">About Us</a></li>
+                        <li><a href="#" class="link">Service</a></li>
+                        <li><a href="#" class="link">Case Studies</a></li>
+                        <li><a href="#" class="link">Blog</a></li>
+                        <li><a href="#" class="link">Contact</a></li>
+                    </ul>
+                </div>
+                <div class="footer-support">
+                    <h4 class="title">
+                        Support
+                    </h4>
+                    <ul class="footer-links-list">
+                        <li><a href="#" class="link">Community</a></li>
+                        <li><a href="#" class="link">Resources</a></li>
+                        <li><a href="#" class="link">Faqs</a></li>
+                        <li><a href="#" class="link">Privacy Policy</a></li>
+                        <li><a href="#" class="link">Careers</a></li>
+                    </ul>
+                </div>
+                <div class="footer-contact">
+                    <h4 class="title">
+                        Get In Touch
+                    </h4>
+                    <ul class="footer-links-list">
+                        <li><a href="#">
+                                <i class="far fa-envelope"></i>
+                                support@appie.com
+                            </a></li>
+                        <li><a href="#">
+                                <i class="fas fa-phone"></i>
+                                +(642) 342 762 44
+                            </a></li>
+                        <li><a href="#">
+                                <i class="fas fa-map-marker-alt"></i>
+                                442 Belle Terre St Floor 7, San Francisco, AV 4206
+                            </a></li>
+                    </ul>
                 </div>
             </div>
-            <div class="footer-company">
-                <h4 class="title">
-                    Company
-                </h4>
-                <ul class="footer-links-list">
-                    <li><a href="#" class="link">About Us</a></li>
-                    <li><a href="#" class="link">Service</a></li>
-                    <li><a href="#" class="link">Case Studies</a></li>
-                    <li><a href="#" class="link">Blog</a></li>
-                    <li><a href="#" class="link">Contact</a></li>
-                </ul>
-            </div>
-            <div class="footer-support">
-                <h4 class="title">
-                    Company
-                </h4>
-                <ul class="footer-links-list">
-                    <li><a href="#" class="link">Community</a></li>
-                    <li><a href="#" class="link">Resources</a></li>
-                    <li><a href="#" class="link">Faqs</a></li>
-                    <li><a href="#" class="link">Privacy Policy</a></li>
-                    <li><a href="#" class="link">Careers</a></li>
-                </ul>
-            </div>
-            <div class="footer-contact">
-                <h4 class="title">
-                    Get In Touch
-                </h4>
-                <ul class="footer-links-list">
-                    <li><a href="#">
-                        <i class="far fa-envelope"></i>
-                        support@appie.com
-                    </a></li>
-                    <li><a href="#">
-                        <i class="fas fa-phone"></i>
-                        +(642) 342 762 44
-                    </a></li>
-                    <li><a href="#">
-                        <i class="fas fa-map-marker-alt"></i>
-                        442 Belle Terre St Floor 7, San Francisco, AV 4206
-                    </a></li>
-                </ul>
-            </div>
-            <div class="footer-copyright">
+            <div class="footer-bottom">
                 <div class="download-buttons">
                     <a href="#" class="btn-1">
                         <i class="fab fa-apple"></i>
@@ -644,7 +651,6 @@
                     Copyright © 2021 Appie. All rights reserved.
                 </p>
             </div>
-           </div>
         </div>
     </footer>
 </body>
